...
                selection = state.selection,
                composition = state.composition,
            ),
            onValueChange = { state.setTextAndPlaceCursorAtEnd(it.text) },
            modifier = Modifier
                .weight(1f)
                .testTag("message_input"),
            placeholder = { Text(stringResource(R.string.message_input_placeholder)) },
            shape = RoundedCornerShape(24.dp),
            isError = validationError != null,
            label = if (validationError != null) {
                {
                    Text(
...
private fun Button(onSendMessage: () -> Unit, isValid: Boolean, isSending: Boolean) {
    IconButton(
        onClick = onSendMessage,
        enabled = isValid && !isSending,
        modifier = Modifier
            .padding(start = 8.dp)
            .testTag("send_button"),
    ) {
        if (isSending) {
            CircularProgressIndicator(
                modifier = Modifier
                    .size(24.dp)
                    .testTag("sending_indicator"),
...
