<resources>
    <string name="app_name">Messenger</string>
    <string name="message_input_placeholder">Type a message...</string>
    <string name="send_message_content_description">Send message</string>
    <string name="message_input_error_too_long">Message can not be longer then %d characters</string>

    <!-- Chat List Screen -->
    <string name="chat_list_search_content_description">Search chats</string>
    <string name="chat_list_new_chat_content_description">New chat</string>
...
