...
        )

        is NotEmpty -> LazyColumn(
            state = listState,
            modifier = modifier
                .fillMaxSize()
                .testTag("chat_list"),
        ) {
            items(
                items = screenState.uiState.chats,
                key = { it.id.id },
            ) { chatItem ->
                ChatListItem(
...
